force-app/main/default/objects/APT_Credit_Assessment__c/APT_Credit_Assessment__c.object-meta.xml
<CustomObject>
    <label>Credit Assessment</label>
    <nameField>
        <displayFormat>Credit Assess - {0000}</displayFormat>
        <label>Credit Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>