force-app/main/default/objects/APT_Credit_Assessment__c/fields/Application_Submitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date_Time__c</fullName>
    <description>This field is used to store the date and time of application submitted from BCA Online application.</description>
    <label>Application Submitted Date Time</label>
    <type>DateTime</type>
</CustomField>