force-app/main/default/objects/APT_Credit_Assessment__c/fields/Application_Summary_Content__c.field-meta.xml
<CustomField>
    <fullName>Application_Summary_Content__c</fullName>
    <label>Application Summary Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>