force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_ABN__c.field-meta.xml
<CustomField>
    <fullName>APT_ABN__c</fullName>
    <description>.</description>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>