force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_ABR_Report__c.field-meta.xml
<CustomField>
    <fullName>APT_ABR_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABR Report</label>
    <referenceTo>APT_ABRreport__c</referenceTo>
    <relationshipLabel>Credit Assessments</relationshipLabel>
    <relationshipName>Credit_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>