force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D7</fullName>
            </value>
            <value>
                <fullName>D30</fullName>
            </value>
            <value>
                <fullName>D60</fullName>
            </value>
            <value>
                <fullName>D90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>