force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_ACN__c.field-meta.xml
<CustomField>
    <fullName>APT_ACN__c</fullName>
    <label>Australian Company Number (ACN)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>