force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_City__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_City__c</fullName>
    <label>Applicant 1 City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>