force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_Credit_Check_Consent__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_Credit_Check_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant 1 Credit Check Consent</label>
    <type>Checkbox</type>
</CustomField>