force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_Drivers_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_Drivers_Licence_Number__c</fullName>
    <label>Applicant 1 Driver&apos;s Licence Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>