force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_Middle_Name__c</fullName>
    <label>Applicant 1 Middle Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>