force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_Postcode__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_Postcode__c</fullName>
    <label>Applicant 1 Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>