force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_Street_Number__c</fullName>
    <label>Applicant 1 Street Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>