force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_Suburb__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_Suburb__c</fullName>
    <label>Applicant 1 Suburb</label>
    <length>25</length>
    <type>Text</type>
</CustomField>