force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_Telephone__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_Telephone__c</fullName>
    <label>Applicant 1 Telephone</label>
    <length>13</length>
    <type>Text</type>
</CustomField>