force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_1_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_1_Unit_Number__c</fullName>
    <label>Applicant 1 Unit Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>