force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_2_Business_Premises__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_2_Business_Premises__c</fullName>
    <label>Applicant 2 Business Premises</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Mortgaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>