force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_2_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_2_Date_of_Birth__c</fullName>
    <label>Applicant 2 Date of Birth</label>
    <type>Date</type>
</CustomField>