force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_2_Last_Name__c</fullName>
    <label>Applicant 2 Last Name</label>
    <length>48</length>
    <type>Text</type>
</CustomField>