force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_2_State__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_2_State__c</fullName>
    <label>Applicant 2 State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>