force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_2_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_2_Street_Type__c</fullName>
    <label>Applicant 2 Street Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>ANC</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>AVE</fullName>
            </value>
            <value>
                <fullName>BAS</fullName>
            </value>
            <value>
                <fullName>BLK</fullName>
            </value>
            <value>
                <fullName>BND</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>BRA</fullName>
            </value>
            <value>
                <fullName>BRK</fullName>
            </value>
            <value>
                <fullName>BWL</fullName>
            </value>
            <value>
                <fullName>BYW</fullName>
            </value>
            <value>
                <fullName>CDS</fullName>
            </value>
            <value>
                <fullName>CIR</fullName>
            </value>
            <value>
                <fullName>CLD</fullName>
            </value>
            <value>
                <fullName>CMN</fullName>
            </value>
            <value>
                <fullName>CNR</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>CRW</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>CTW</fullName>
            </value>
            <value>
                <fullName>CVE</fullName>
            </value>
            <value>
                <fullName>CYD</fullName>
            </value>
            <value>
                <fullName>DEL</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>DTR</fullName>
            </value>
            <value>
                <fullName>EGE</fullName>
            </value>
            <value>
                <fullName>END</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>