force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_2_Suburb__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_2_Suburb__c</fullName>
    <label>Applicant 2 Suburb</label>
    <length>25</length>
    <type>Text</type>
</CustomField>