force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Applicant_2_Title__c.field-meta.xml
<CustomField>
    <fullName>APT_Applicant_2_Title__c</fullName>
    <label>Applicant 2 Title</label>
    <length>10</length>
    <type>Text</type>
</CustomField>