force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Assessment_Type__c</fullName>
    <label>Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
                <default>true</default>
                <label>Company</label>
            </value>
            <value>
                <fullName>Partnership/ Sole Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>