force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Australia_Post_Arrears__c.field-meta.xml
<CustomField>
    <fullName>APT_Australia_Post_Arrears__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Australia Post Arrears</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>