force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Business_Name__c</fullName>
    <label>Business Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>