force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Trader</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Trading Trust</fullName>
            </value>
            <value>
                <fullName>Government Authority</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>International Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>