force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Charge_Account__c.field-meta.xml
<CustomField>
    <fullName>APT_Charge_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Account</label>
    <referenceTo>APT_Charge_Account__c</referenceTo>
    <relationshipLabel>Credit Assessments</relationshipLabel>
    <relationshipName>Credit_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>