force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Comments__c.field-meta.xml
<CustomField>
    <fullName>APT_Comments__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>