force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>