force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Country__c.field-meta.xml
<CustomField>
    <fullName>APT_Country__c</fullName>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>