force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Credit_Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>APT_Credit_Assessment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>