force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Date_Commenced__c.field-meta.xml
<CustomField>
    <fullName>APT_Date_Commenced__c</fullName>
    <label>Date Commenced</label>
    <type>Date</type>
</CustomField>