force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>APT_Email_Address__c</fullName>
    <label>Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>