force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FUND</fullName>
            </value>
            <value>
                <fullName>GOVT</fullName>
            </value>
            <value>
                <fullName>TRUST</fullName>
            </value>
            <value>
                <fullName>BUSINESS</fullName>
            </value>
            <value>
                <fullName>INDV</fullName>
            </value>
            <value>
                <fullName>APTY</fullName>
            </value>
            <value>
                <fullName>APUB</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>OTHER_INCORPORATED</fullName>
            </value>
            <value>
                <fullName>PARTNERSHIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>