force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Fax__c.field-meta.xml
<CustomField>
    <fullName>APT_Fax__c</fullName>
    <label>Fax</label>
    <length>13</length>
    <type>Text</type>
</CustomField>