force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Holding_Company__c.field-meta.xml
<CustomField>
    <fullName>APT_Holding_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holding Company</label>
    <type>Checkbox</type>
</CustomField>