force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Holding_Company_ACN__c.field-meta.xml
<CustomField>
    <fullName>APT_Holding_Company_ACN__c</fullName>
    <label>Holding Company ACN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>