force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Holding_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Holding_Company_Name__c</fullName>
    <label>Holding Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>