force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Legal_Entity_Name__c</fullName>
    <description>.</description>
    <label>Legal Entity Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>