force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>APT_Nature_of_Business__c</fullName>
    <label>Nature of Business</label>
    <length>50</length>
    <type>Text</type>
</CustomField>