force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>APT_Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>