force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Position_Title__c.field-meta.xml
<CustomField>
    <fullName>APT_Position_Title__c</fullName>
    <label>Position Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>