force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Postal_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>APT_Postal_Address_Line_2__c</fullName>
    <description>To store the business postal address line 2</description>
    <label>Postal Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>