force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Postal_Postcode__c.field-meta.xml
<CustomField>
    <fullName>APT_Postal_Postcode__c</fullName>
    <description>To store the business postal postcode</description>
    <label>Postal Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>