force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Postal_State__c.field-meta.xml
<CustomField>
    <fullName>APT_Postal_State__c</fullName>
    <description>To store the business postal state</description>
    <label>Postal State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>