force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Postcode__c.field-meta.xml
<CustomField>
    <fullName>APT_Postcode__c</fullName>
    <label>Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>