force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Proposal__c.field-meta.xml
<CustomField>
    <fullName>APT_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Credit Assessments</relationshipLabel>
    <relationshipName>Credit_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>