force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Reference_Business_Name_3__c.field-meta.xml
<CustomField>
    <fullName>APT_Reference_Business_Name_3__c</fullName>
    <label>Reference Business Name 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>