force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Reference_Contact_Name_2__c.field-meta.xml
<CustomField>
    <fullName>APT_Reference_Contact_Name_2__c</fullName>
    <label>Reference Contact Name 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>