force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Reference_Phone_Number_2__c.field-meta.xml
<CustomField>
    <fullName>APT_Reference_Phone_Number_2__c</fullName>
    <label>Reference Phone Number 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>