force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_State__c.field-meta.xml
<CustomField>
    <fullName>APT_State__c</fullName>
    <label>State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>