force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Street_Name__c</fullName>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>